Affichage de la liste de médicaments complète, message quand il n'y a pas de médicaments trouvés.